WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99781
Skia ImageDecoder doesn't set m_hasAlpha in copyBitmapData()
https://bugs.webkit.org/show_bug.cgi?id=99781
Summary
Skia ImageDecoder doesn't set m_hasAlpha in copyBitmapData()
Peter Kasting
Reported
2012-10-18 17:43:52 PDT
The underlying SkBitmap has the "is opaque" bit set correctly, but the ImageFrame member isn't updated correctly. This leads to occasional glitchiness like
http://crbug.com/156526
. This wasn't exposed until recently because Skia used to erroneously treat all images as non-opaque.
Attachments
patch v1
(1.46 KB, patch)
2012-10-18 17:45 PDT
,
Peter Kasting
abarth
: review+
abarth
: commit-queue+
Details
Formatted Diff
Diff
patch v1.1
(1.46 KB, patch)
2012-10-18 17:54 PDT
,
Peter Kasting
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Peter Kasting
Comment 1
2012-10-18 17:45:05 PDT
Created
attachment 169516
[details]
patch v1
Adam Barth
Comment 2
2012-10-18 17:48:10 PDT
Comment on
attachment 169516
[details]
patch v1 View in context:
https://bugs.webkit.org/attachment.cgi?id=169516&action=review
> Source/WebCore/ChangeLog:9 > + No tests, since the actual effects of this bug are fickle and it's not > + clear how to extract and check particular subframes of an animated GIF.
Frowns.
WebKit Review Bot
Comment 3
2012-10-18 17:49:06 PDT
Attachment 169516
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Peter Kasting
Comment 4
2012-10-18 17:54:25 PDT
Created
attachment 169520
[details]
patch v1.1 If I have to update the patch anyway, I'll just go ahead and land...
Peter Kasting
Comment 5
2012-10-18 18:02:39 PDT
Fixed in
r131831
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug