[Skia] Set m_hasAlpha correctly in ImageFrame::copyBitmapData. https://bugs.webkit.org/show_bug.cgi?id=99781

Reviewed by Adam Barth.

No tests, since the actual effects of this bug are fickle and it's not
clear how to extract and check particular subframes of an animated GIF.

* platform/image-decoders/skia/ImageDecoderSkia.cpp:
(WebCore::ImageFrame::copyBitmapData):



Canonical link: https://commits.webkit.org/117767@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131831 268f45cc-cd09-0410-ab3c-d52691b4dbfc